fix manage key header bar and improve button readability on hover.

--- a/web_frontend/cloudscheduler/csv2/static/glintwebui/css/glint_button.css
+++ b/web_frontend/cloudscheduler/csv2/static/glintwebui/css/glint_button.css
@@ -22,7 +22,7 @@
 
 .greenbutton:hover {
     background-color: #fffeea;
-    color: white;
+    color: green;
 }
 
 .redbutton {
